--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -13,13 +13,14 @@
     "results. Specify your initial guesses of the solution. If you change\n",
     "your initial guess, do you find different solutions? (**100 points**)\n",
     "\n",
-    "$$\\\\begin{aligned}\n",
-    "                &\\\\text{minimize:} && (x_1-x_2)^2 + (x_2+x_3-2)^2 + (x_4-1)^2+(x_5-1)^2 \\\\\\\\\n",
-    "                &\\\\text{subject to:} && x_1 + 3x_2 = 0 \\\\\\\\\n",
-    "                &&& x_3 + x_4 - 2x_5 = 0 \\\\\\\\\n",
-    "                &&& x_2 - x_5 = 0 \\\\\\\\\n",
-    "                &&& -10 \\\\leq x_i \\\\leq 10, \\~i=1,\\\\ldots,5\n",
-    "              \\\\end{aligned}$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "&\\text{minimize:} && (x_1-x_2)^2 + (x_2+x_3-2)^2 + (x_4-1)^2+(x_5-1)^2 \\\\\\\\\n",
+    "&\\text{subject to:} && x_1 + 3x_2 = 0 \\\\\\\\\n",
+    "&&& x_3 + x_4 - 2x_5 = 0 \\\\\\\\\n",
+    "&&& x_2 - x_5 = 0 \\\\\\\\\n",
+    "&&& -10 \\leq x_i \\leq 10, ~i=1,\\ldots,5\n",
+    "\\end{aligned}$$\n",
     "\n",
     "**Note**:\n",
     "\n",
@@ -36,7 +37,7 @@
     "\n",
     "1.  Clone the [course repo][]: First click on **Code** to get the\n",
     " Git address (e.g., the HTTPS address). Then use your IDE to clone (download) the repo using this address. \n",
-    " [PyCharm tutorial on using Git][].\n",
+    " [PyCharm tutorial][] on using Git.\n",
     "\n",
     "2.  You will find the homework in the **Homework** folder.\n",
     "\n",
@@ -65,6 +66,13 @@
     "[Markdown]: https://guides.github.com/features/mastering-markdown/\n",
     "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ (x_1-x_2)^2 + (x_2+x_3-2)^2 + (x_4-1)^2+(x_5-1)^2$ is a beautiful equation\n"
+   ]
   }
  ],
  "metadata": {
@@ -76,25 +84,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
