--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -19,7 +19,7 @@
     "&\\text{subject to:} && x_1 + 3x_2 = 0 \\\\\\\\\n",
     "&&& x_3 + x_4 - 2x_5 = 0 \\\\\\\\\n",
     "&&& x_2 - x_5 = 0 \\\\\\\\\n",
-    "&&& -10 \\leq x_i \\leq 10, ~i=1,\\ldots,5\n",
+    "&&& -10 \\leq x_i \\leq 10, \\~i=1,\\ldots,5\n",
     "\\end{aligned}$$\n",
     "\n",
     "**Note**:\n",
@@ -64,14 +64,7 @@
     "[Pandoc]: https://pandoc.org/try/\n",
     "[Jupyter Notebook]: https://jupyter.org/try\n",
     "[Markdown]: https://guides.github.com/features/mastering-markdown/\n",
-    "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$ (x_1-x_2)^2 + (x_2+x_3-2)^2 + (x_4-1)^2+(x_5-1)^2$ is a beautiful equation\n"
+    "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/"
    ]
   }
  ],
@@ -96,10 +89,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
