--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -66,6 +66,117 @@
     "[Markdown]: https://guides.github.com/features/mastering-markdown/\n",
     "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] - 1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x: x[0] + 3*x[1]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (1,1,1,1,1), method = 'SLSQP', bounds = bnds,\n",
+    "               constraints = cons)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.09302326452976"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] - 1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x: x[0] + 3*x[1]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (-10,-5,0,5,10), method = 'SLSQP', bounds = bnds,\n",
+    "               constraints = cons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.093023255813954"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] - 1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x: x[0] + 3*x[1]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (-1,-1,-1,-1,-1), method = 'SLSQP', bounds = bnds,\n",
+    "               constraints = cons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.093023255824878"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.fun"
+   ]
   }
  ],
  "metadata": {
@@ -84,15 +195,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
