Finished markdown explanation for question 1

--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -177,6 +177,13 @@
    "source": [
     "res.fun"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The initial guesses of the solution are x1 = x2 = x3 = x4 = x5 = 1. This minimizes to 4.09302326452976. If the initial guesses are altered within the bounds of -10 to 10, the solution is slightly different: if initial guesses are x1 = -10, x2 = -5, x3 = 0, x4 = 5, and x5 = 10, the solution minimizes to 4.093023255813954, and if the initial guesses are x1 = x2 = x3 = x4 = x5 = -1, the solution minimizes to 4.093023255824878. The solution varies around the eighth decimal place, which is a considerably small numerical error. This is likely due to inherent convergence margins in the program. Since the solution is determined iteratively, it is not efficient to allow the program to run long enough to calculate an extremely accurate value. With varied initial guesses and a predetermined percent change between iterated solutions, the program will be able to compute efficiently with an acceptable level of accuracy."
+   ]
   }
  ],
  "metadata": {
