--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -66,6 +66,63 @@
     "[Markdown]: https://guides.github.com/features/mastering-markdown/\n",
     "[Markdown Math]: http://luvxuan.top/posts/Markdown-math/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "fun = lambda x: (x[0] - x[2])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
+    "cons = ({'type': 'eq', 'fun': lambda x:  x[0] + 3*x[1]},\n",
+    "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
+    "        {'type': 'eq', 'fun': lambda x: -x[0] + 2 * x[1] + 2})\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
+    "res = minimize(fun, (1,3,4,5,6), method='SLSQP', bounds=bnds,\n",
+    "               constraints=cons)\n",
+    "                                                                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     fun: 0.8363636363649362\n",
+       "     jac: array([-1.05454643, -1.34545355, -0.29090709, -0.29091084,  0.58181781])\n",
+       " message: 'Optimization terminated successfully'\n",
+       "    nfev: 37\n",
+       "     nit: 6\n",
+       "    njev: 6\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([ 1.2       , -0.4       ,  1.72727322,  0.85454457,  1.2909089 ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -89,10 +146,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
