--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -19,7 +19,7 @@
     "&\\text{subject to:} && x_1 + 3x_2 = 0 \\\\\\\\\n",
     "&&& x_3 + x_4 - 2x_5 = 0 \\\\\\\\\n",
     "&&& x_2 - x_5 = 0 \\\\\\\\\n",
-    "&&& -10 \\leq x_i \\leq 10, \\~i=1,\\ldots,5\n",
+    "&&& -10 \\leq x_i \\leq 10, ~i=1,\\ldots,5\n",
     "\\end{aligned}$$\n",
     "\n",
     "**Note**:\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -82,33 +82,32 @@
     "fun = lambda x: (x[0] - x[2])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
     "cons = ({'type': 'eq', 'fun': lambda x:  x[0] + 3*x[1]},\n",
     "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
-    "        {'type': 'eq', 'fun': lambda x: -x[0] + 2 * x[1] + 2})\n",
+    "        {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
     "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
-    "res = minimize(fun, (1,3,4,5,7), method='SLSQP', bounds=bnds,\n",
-    "               constraints=cons)\n",
-    "                                                                    "
+    "res = minimize(fun, (5,5,5,5,5), method='SLSQP', bounds=bnds,\n",
+    "               constraints=cons)                                                                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "     fun: 0.8363636363649362\n",
-       "     jac: array([-1.05454643, -1.34545355, -0.29090709, -0.29091084,  0.58181781])\n",
-       " message: 'Optimization terminated successfully'\n",
-       "    nfev: 37\n",
+       "     fun: 4.292682926857137\n",
+       "     jac: array([-2.14634591, -3.12194544, -0.97559947, -0.97561735, -1.36585426])\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "    nfev: 43\n",
        "     nit: 6\n",
        "    njev: 6\n",
        "  status: 0\n",
        " success: True\n",
-       "       x: array([ 1.2       , -0.4       ,  1.72727322,  0.85454457,  1.2909089 ])"
+       "       x: array([-0.95121858,  0.31707286,  0.1219544 ,  0.51219132,  0.31707286])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
