Add 3 different initial guess. Add final answer.

--- a/Homework/Homework 1.ipynb
+++ b/Homework/Homework 1.ipynb
@@ -78,33 +78,37 @@
    "outputs": [],
    "source": [
     "from scipy.optimize import minimize\n",
-    "\n",
-    "fun = lambda x: (x[0] - x[2])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
+    "# function definition\n",
+    "fun = lambda x: (x[0] - x[1])**2 + (x[1] + x[2] - 2)**2 + (x[3] - 1)**2 + (x[4] -1)**2\n",
+    "# constraints\n",
     "cons = ({'type': 'eq', 'fun': lambda x:  x[0] + 3*x[1]},\n",
     "        {'type': 'eq', 'fun': lambda x: x[2] + x[3] - 2*x[4]},\n",
     "        {'type': 'eq', 'fun': lambda x: x[1] - x[4]})\n",
-    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))\n",
-    "res = minimize(fun, (5,5,5,5,5), method='SLSQP', bounds=bnds,\n",
-    "               constraints=cons)                                                                    "
+    "# boundaries\n",
+    "bnds = ((-10, 10), (-10, 10), (-10, 10), (-10, 10), (-10, 10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "     fun: 4.292682926857137\n",
-       "     jac: array([-2.14634591, -3.12194544, -0.97559947, -0.97561735, -1.36585426])\n",
+       "     fun: 4.093023261962584\n",
+       "     jac: array([-2.04641944, -0.1860919 , -2.2325114 , -2.23267382, -1.48839509])\n",
        " message: 'Optimization terminated successfully.'\n",
-       "    nfev: 43\n",
-       "     nit: 6\n",
-       "    njev: 6\n",
+       "    nfev: 50\n",
+       "     nit: 7\n",
+       "    njev: 7\n",
        "  status: 0\n",
        " success: True\n",
-       "       x: array([-0.95121858,  0.31707286,  0.1219544 ,  0.51219132,  0.31707286])"
+       "       x: array([-0.76740731,  0.25580244,  0.62794182, -0.11633695,  0.25580244])"
       ]
      },
      "execution_count": 2,
@@ -113,7 +117,86 @@
     }
    ],
    "source": [
-    "res"
+    "# Result 1\n",
+    "# Initial guess (5,5,5,5,5)\n",
+    "res1 = minimize(fun, (5,5,5,5,5), method='SLSQP', bounds=bnds,\n",
+    "               constraints=cons) \n",
+    "res1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     fun: 4.093023255813954\n",
+       "     jac: array([-2.04651159, -0.18604648, -2.23255813, -2.23255813, -1.48837209])\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "    nfev: 23\n",
+       "     nit: 3\n",
+       "    njev: 3\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([-0.76744186,  0.25581395,  0.62790698, -0.11627907,  0.25581395])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Result 2\n",
+    "# Initial guess (0,0,0,0,0)\n",
+    "res2 = minimize(fun, (0,0,0,0,0), method='SLSQP', bounds=bnds,\n",
+    "               constraints=cons) \n",
+    "res2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     fun: 4.093023258012866\n",
+       "     jac: array([-2.04654068, -0.18606836, -2.23260909, -2.23248529, -1.48836476])\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "    nfev: 56\n",
+       "     nit: 8\n",
+       "    njev: 8\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([-0.76745277,  0.25581759,  0.62787786, -0.11624267,  0.25581759])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Result 3\n",
+    "# Initial guess (10,10,10,10,10)\n",
+    "res3 = minimize(fun, (10,10,10,10,10), method='SLSQP', bounds=bnds,\n",
+    "               constraints=cons) \n",
+    "res3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "**Final solution**: x1~x5 = [-0.76745277,  0.25581759,  0.62787786, -0.11624267,  0.25581759], minimized value = 4.093023258012866\n",
+    "\n",
+    "**Answer**:If changing the inital guess, the final solution is still the same. However, the iteration number is different."
    ]
   },
   {
