--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -53,10 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x2, x3)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = lambda x2, x3:(x2-1)**2\n",
+    "obj"
+   ]
   },
   {
    "cell_type": "markdown",
