--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -55,21 +55,18 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(x2, x3)>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "obj = lambda x2, x3:(x2-1)**2\n",
-    "obj"
+    "obj = lambda x2, x3: 5*x2**2+8*x2+12*x2*x3+10*x3**2+14*x3+5\n",
+    "grad_x2 = lambda x2, x3: 10*x2+8+12*x3\n",
+    "grad_x3 = lambda x2, x3: 12*x2+20*x3+14\n",
+    "eps = 1e-3\n",
+    "x2_0 = 0\n",
+    "x3_0 = 0\n",
+    "k = 0\n",
+    "soln = [x2_0, x3_0]\n",
+    "\n",
+    "a = 0.01"
    ]
   },
   {
