Problems 1 and 2 (theory part)

--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "touched-logic",
-   "metadata": {},
    "source": [
     "# Theory/Computation Problems\n",
     "\n",
@@ -30,12 +28,11 @@
     "### Problem 4 (bonus 10 points)\n",
     "Show that $f({\\bf x}_1) \\geq f(\\textbf{x}_0) + \n",
     "    \\textbf{g}_{\\textbf{x}_0}^T(\\textbf{x}_1-\\textbf{x}_0)$ for a convex function $f(\\textbf{x}): \\mathcal{X} \\rightarrow \\mathbb{R}$ and for $\\textbf{x}_0$, $\\textbf{x}_1 \\in \\mathcal{X}$. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "collected-carbon",
-   "metadata": {},
    "source": [
     "# Design Problems\n",
     "\n",
@@ -46,26 +43,75 @@
     "* (5 points) Is your problem convex?\n",
     "* (5 points) If we require the overall power output of any of the $n$ lamps to be less than $p^*$, will the problem have a unique solution?\n",
     "* (5 points) If we require no more than half of the lamps to be switched on, will the problem have a unique solution?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-twins",
-   "metadata": {},
    "source": [
-    "# Note\n",
+    "Problem 1.0.1 \n",
+    "$$f = 2x_{1}^{2} - 4x_1x_2 + 1.5x_2^2$$\n",
+    "The stationary point of the function is obtained by taking the gradient and setting it to zero: \\\n",
+    "$ \\rho = \\begin{bmatrix}4x_1 - 4x_2 \\\\ -4x_1 + 3x_2 + 1 \\end{bmatrix}$ = 0\\\n",
+    "Solving for x_1 and x_2 gives a stationary point (1,1). \\\n",
+    "Indefiniteness of the Hessian can be shown by computing its eigenvalues: \\\n",
     "\n",
-    "For this homework, you may want to attach sketches as means to explain your ideas. Here is how you can attach images.\n",
+    "$ H = \\begin{bmatrix} 4 & -4 \\\\ -4 & -1 \\end{bmatrix} $ \\\n",
+    "$ \\begin{vmatrix} 4 - \\lambda & -4 \\\\ -4 & -1 - \\lambda \\end{vmatrix} = 0 $ \\\n",
+    "$ \\lambda_{1} = 10.54, \\lambda_{2} = -4.54 $ \\\n",
+    "Since the eigenvalues are both positive and negative, the Hessian is indefinite. \\\n",
+    "To find the direction of the slopes awy from the saddle point (1,1): \\\n",
+    "$ f = f(1,1) + \\frac{f_{x_1x_1}(1,1)(x_1 - 1)^2}{2} + \\frac{f_{x_1x_2}(1,1)(x_1 - 1)(x_2 - 1)}{2} + \\frac{f_{x_2x_2}(1,1)(x_2 - 1)^2}{2} $ \\\n",
+    "$ f = 0.5 + 2(x_1 - 1)^2 - 2(x_1 - 1)(x_2 - 1) - 0.5(x_2 - 1)^2 $ \\\n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Problem 2:\n",
+    "Part a: (Analytical)\n",
+    "The problem asks to find a point closest to (-1, 0, 1) such that it is constrained to lie on the plane $ x_1 + 2x_2 + 3x_3 = 1 $. \\\n",
+    "The problem can be formulated as:\n",
+    "$ \\underset{x}{\\operatorname{argmin}} L(x_0, x) \\\\\n",
+    " \\text{st } x_1 + 2x_2 + 3x_3 = 1 $\n",
+    "\\\n",
+    "Using Lagrange multipliers on the equality constraint: \n",
+    "\\\n",
+    "$ \\underset{x}{\\operatorname{argmin}} L(x, x_0) = (x_{01} - x_1)^2 + (x_{02} - x_2)^2 + (x_{03} - x_3)^2 = \\lambda g(x) $ \\\n",
+    "$ \\nabla L(x) = \\lambda \\nabla g(x) $ \\\n",
+    "$ g(x) = c $ \\\n",
+    "The constraint equation works out to be: \\\n",
+    "$ \\nabla L(x) = \\begin{bmatrix}2x_1 + 2 \\\\ 2x_2 \\\\ 2x_3 - 2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ \\lambda \\\\ 2\\lambda \\end{bmatrix} $ \\\n",
+    "Together with the equation $ x_1 + 2x_2 + 3x_3 - 1 = 0 $, solving for the x's we get:\\\n",
+    "$ x = \\begin{bmatrix} -1 \\\\ \\frac{-1}{-8} \\\\ \\frac{-1}{4} \\end{bmatrix} $ \\\n",
     "\n",
-    "![everly1](img/everly7.jpg)"
-   ]
+    "\n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Problem 3: \n",
+    "(i) Let f(x) and g(x) be two convex functions defined on the convex set X. "
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -78,6 +124,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "interpreter": {
+   "hash": "283a19fe1c80cc8d674e9be3676f3725f85ae6255e6112c9eba9160b54893d27"
   }
  },
  "nbformat": 4,
