--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -60,9 +60,10 @@
     "$ \\begin{vmatrix} 4 - \\lambda & -4 \\\\ -4 & -1 - \\lambda \\end{vmatrix} = 0 $ \\\n",
     "$ \\lambda_{1} = 10.54, \\lambda_{2} = -4.54 $ \\\n",
     "Since the eigenvalues are both positive and negative, the Hessian is indefinite. \\\n",
-    "To find the direction of the slopes awy from the saddle point (1,1): \\\n",
-    "$ f = f(1,1) + \\frac{f_{x_1x_1}(1,1)(x_1 - 1)^2}{2} + \\frac{f_{x_1x_2}(1,1)(x_1 - 1)(x_2 - 1)}{2} + \\frac{f_{x_2x_2}(1,1)(x_2 - 1)^2}{2} $ \\\n",
-    "$ f = 0.5 + 2(x_1 - 1)^2 - 2(x_1 - 1)(x_2 - 1) - 0.5(x_2 - 1)^2 $ \\\n",
+    "To find the direction of the slopes awy from the saddle point (1,1) we need to find the points such that the difference f - f(1,1) < 0: \\\n",
+    "$ f - f(1,1) = \\frac{f_{x_1x_1}(1,1)(x_1 - 1)^2}{2} + \\frac{f_{x_1x_2}(1,1)(x_1 - 1)(x_2 - 1)}{2} + \\frac{f_{x_2x_2}(1,1)(x_2 - 1)^2}{2} $ \\\n",
+    "$ f - 0.5 = 2(x_1 - 1)^2 - 2(x_1 - 1)(x_2 - 1) - 0.5(x_2 - 1)^2 < 0 $ \\ \n",
+    "\n",
     "\n"
    ],
    "metadata": {}
@@ -103,7 +104,43 @@
    "cell_type": "markdown",
    "source": [
     "Problem 3: \n",
-    "(i) Let f(x) and g(x) be two convex functions defined on the convex set X. "
+    "(i) Let f(x) and g(x) be two convex functions defined on the convex set X. \n",
+    "The linear combination h(x) is defined as: \\\n",
+    "$ h(x) = af(x) + bg(x) $\n",
+    "If f(x) and g(x) are convex then: \\\n",
+    "$ f(\\lambda x_1 + (1- \\lambda)x_2) \\le \\lambda f(x_1) + (1 - \\lambda)f(x_2) $ \\\n",
+    "$ g(\\lambda x_1 + (1- \\lambda)x_2) \\le \\lambda g(x_1) + (1 - \\lambda)g(x_2) $ \\\n",
+    "$ af(\\lambda x_1 + (1- \\lambda)x_2) + bg(\\lambda x_1 + (1- \\lambda)x_2) \\le a(\\lambda f(x_1) + (1 - \\lambda)f(x_2)) + b(\\lambda g(x_1) + (1 - \\lambda)g(x_2)) $ \\\n",
+    "The right side can be rewritten as: \\\n",
+    "$ \\lambda(af(x_1) + bg(x_1)) + (1-\\lambda)(af(x_2) + bg(x_2)) $ \\\n",
+    "From the definition of h(x), the right hand side can be transformed to: \\\n",
+    "$ \\lambda h(x_1) + (1-\\lambda)h(x_2) $ \\\n",
+    "$ \\square $ \\\n",
+    "(ii) \n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Problem 5 \n",
+    "(i) Formulation of optimization problem:\n",
+    "$ \\underset{p_j}{\\operatorname{min}} \\sum_{k = 1}^{n} (I_k - I_t)^2 $ \\\n",
+    "st $ 0 \\le p_j \\le p_{max}$ \\\n",
+    "(ii) A formulation is convex if the objective is a convex function and the constraints have a feasible set that is convex. In  this case, the objective is convex due to the fact that $ I_k - I_t = a_k^Tp - I_t $ which is a hyperplane, and squaring a hyperplane is a quadratic function that is also convex. Moreover, the summation of k convex functions is also convex. Therefore the objective is convex. The feasible set from the constraints is convex because they form a segmented space that is a hypercube. \\\n",
+    "(iii) If we require the power output of any of the n lamps to be less than p*, the modified optimization problem is: \\\n",
+    "$ \\underset{p_j}{\\operatorname{min}} \\sum_{k = 1}^{n} (I_k - I_t)^2 $ \\\n",
+    "st $ 0 \\le p_j \\le p_{max}$ , \\\n",
+    "$ \\sum_{j = 1}^{k} p_j < p^*,  k = {1,...,n}$ \\\n",
+    "The second constraint can be further split into n separate constraints. Unique solutions are possible if all the constraints are convex sets. Consider the constraint $ \\sum_{j = 1}^{l} p_j \\lt p^* , l \\epsilon k $. The summation produces an l-dimensional half space of a hyperplane, which is a convex set. Therefore the problem has a unique solution.\n",
+    "\n",
+    "\n"
    ],
    "metadata": {}
   }
