--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -187,11 +187,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![HW2_3](img/HW2_3.jpg)"
+   ]
   },
   {
    "cell_type": "markdown",
