--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -127,7 +127,7 @@
        "array([ 0.14244836, -0.78544176])"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,11 +225,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![HW2_5](img/HW2_5.jpg)"
+   ]
   }
  ],
  "metadata": {
