Problem 2 coding part

--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -86,18 +86,11 @@
     "The constraint equation works out to be: \\\n",
     "$ \\nabla L(x) = \\begin{bmatrix}2x_1 + 2 \\\\ 2x_2 \\\\ 2x_3 - 2 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ \\lambda \\\\ 2\\lambda \\end{bmatrix} $ \\\n",
     "Together with the equation $ x_1 + 2x_2 + 3x_3 - 1 = 0 $, solving for the x's we get:\\\n",
-    "$ x = \\begin{bmatrix} -1 \\\\ \\frac{-1}{-8} \\\\ \\frac{-1}{4} \\end{bmatrix} $ \\\n",
+    "$ x = \\begin{bmatrix} -1 \\\\ \\frac{-1}{8} \\\\ \\frac{3}{4} \\end{bmatrix} $ \\\n",
     "\n",
     "\n",
     "\n"
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -122,11 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "Problem 5 \n",
     "(i) Formulation of optimization problem:\n",
@@ -140,6 +128,265 @@
     "The second constraint can be further split into n separate constraints. Unique solutions are possible if all the constraints are convex sets. Consider the constraint $ \\sum_{j = 1}^{l} p_j \\lt p^* , l \\epsilon k $. The summation produces an l-dimensional half space of a hyperplane, which is a convex set. Therefore the problem has a unique solution.\n",
     "\n",
     "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "# PROBLEM 2 : CODE FOR GRADIENT DESCENT\n",
+    "import numpy as np\n",
+    "\n",
+    "def objective(x):\n",
+    "    return (2 - (2*x[0]) - (3*x[1]))**2 + (x[0])**2 + (x[1] - 1)**2\n",
+    "\n",
+    "def grad(x):\n",
+    "    return np.asarray([10*x[0] + 12*x[1] - 8, 12*x[0] + 20*x[1] - 14])\n",
+    "\n",
+    "def phi(a,x):\n",
+    "    obj = objective(x)\n",
+    "    corr = a*np.asarray([g**2 for g in grad(x)])\n",
+    "    return obj - corr\n",
+    "\n",
+    "def line_search(x):\n",
+    "    a = 1  # initialize step size\n",
+    "    while np.linalg.norm(phi(a,x))<objective(x-a*grad(x)):  # if f(x+a*d)>phi(a) then backtrack. d is the search direction\n",
+    "        a = 0.5*a\n",
+    "    return a\n",
+    "\n",
+    "eps = 1e-3\n",
+    "x0 = [0,0]\n",
+    "k = 0\n",
+    "x = x0\n",
+    "\n",
+    "error = np.linalg.norm(grad(x))\n",
+    "\n",
+    "while error >= eps and k < 10000:  # keep searching while gradient norm is larger than eps\n",
+    "    a = line_search(x)\n",
+    "    x = x - a*grad(x)\n",
+    "    error = np.linalg.norm(grad(x))\n",
+    "    k+=1\n",
+    "    if k % 100 == 0: print(\"Iteration:\", k, \"alpha:\", a, \"Error:\", error, \"x:\", x)\n",
+    "\n",
+    "x1 = 1 - 2*x[0] - 3*x[1]\n",
+    "x = [x1, x[0], x[1]]\n",
+    "print(\"Final solution:\", x)\n",
+    "\n",
+    "###########################################\n",
+    "# Problem 2: Newton's method\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def objective(x):\n",
+    "    return (2 - (2*x[0]) - (3*x[1]))**2 + (x[0])**2 + (x[1] - 1)**2\n",
+    "\n",
+    "def grad(x):\n",
+    "    return np.asarray([10*x[0] + 12*x[1] - 8, 12*x[0] + 20*x[1] - 14])\n",
+    "\n",
+    "def hessian():\n",
+    "    return np.asarray([[10,12],[12,20]])\n",
+    "\n",
+    "def phi(a,x):\n",
+    "    obj = objective(x)\n",
+    "    corr = a*np.asarray([g**2 for g in grad(x)])\n",
+    "    return obj - corr\n",
+    "\n",
+    "def line_search(x):\n",
+    "    a = 1  # initialize step size\n",
+    "    while np.linalg.norm(phi(a,x))<objective(x-a*grad(x)):  # if f(x+a*d)>phi(a) then backtrack. d is the search direction\n",
+    "        a = 0.5*a\n",
+    "    return a\n",
+    "\n",
+    "eps = 1e-3\n",
+    "x0 = [0,0]\n",
+    "k = 0\n",
+    "x = np.asarray(x0).reshape(2,1)\n",
+    "\n",
+    "error = np.linalg.norm(grad(x))\n",
+    "\n",
+    "while error >= eps and k < 1000:  # keep searching while gradient norm is larger than eps\n",
+    "    a = line_search(x)\n",
+    "    x = x - a*np.matmul(np.linalg.inv(hessian()), grad(x).reshape(2,1))\n",
+    "    error = np.linalg.norm(grad(x))\n",
+    "    k+=1\n",
+    "    if k % 1 == 0: print(\"Iteration:\", k, \"alpha:\", a, \"Error:\", error, \"x:\", x)\n",
+    "\n",
+    "x1 = 1 - 2*x[0] - 3*x[1]\n",
+    "x = [x1, x[0], x[1]]\n",
+    "print(\"Final solution:\", x)\n",
+    "\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Iteration: 1 alpha: 0.0625 Error: 15.116733278059781 x: [[-0.00892857]\n",
+      " [ 0.04910714]]\n",
+      "Iteration: 2 alpha: 0.0625 Error: 14.171937448181044 x: [[-0.01729911]\n",
+      " [ 0.09514509]]\n",
+      "Iteration: 3 alpha: 0.0625 Error: 13.286191357669729 x: [[-0.02514648]\n",
+      " [ 0.13830566]]\n",
+      "Iteration: 4 alpha: 0.0625 Error: 12.45580439781537 x: [[-0.0325034]\n",
+      " [ 0.1787687]]\n",
+      "Iteration: 5 alpha: 0.0625 Error: 11.677316622951908 x: [[-0.03940051]\n",
+      " [ 0.2167028 ]]\n",
+      "Iteration: 6 alpha: 0.0625 Error: 10.947484334017416 x: [[-0.04586655]\n",
+      " [ 0.25226602]]\n",
+      "Iteration: 7 alpha: 0.0625 Error: 10.263266563141327 x: [[-0.05192846]\n",
+      " [ 0.28560654]]\n",
+      "Iteration: 8 alpha: 0.0625 Error: 9.621812402944995 x: [[-0.0576115 ]\n",
+      " [ 0.31686327]]\n",
+      "Iteration: 9 alpha: 0.0625 Error: 9.020449127760932 x: [[-0.06293936]\n",
+      " [ 0.34616646]]\n",
+      "Iteration: 10 alpha: 0.0625 Error: 8.456671057275875 x: [[-0.06793422]\n",
+      " [ 0.3736382 ]]\n",
+      "Iteration: 11 alpha: 0.0625 Error: 7.928129116196132 x: [[-0.0726169 ]\n",
+      " [ 0.39939295]]\n",
+      "Iteration: 12 alpha: 0.0625 Error: 7.432621046433874 x: [[-0.07700692]\n",
+      " [ 0.42353804]]\n",
+      "Iteration: 13 alpha: 0.0625 Error: 6.968082231031757 x: [[-0.08112255]\n",
+      " [ 0.44617405]]\n",
+      "Iteration: 14 alpha: 0.0625 Error: 6.532577091592273 x: [[-0.08498097]\n",
+      " [ 0.46739532]]\n",
+      "Iteration: 15 alpha: 0.0625 Error: 6.124291023367755 x: [[-0.08859823]\n",
+      " [ 0.48729025]]\n",
+      "Iteration: 16 alpha: 0.0625 Error: 5.741522834407272 x: [[-0.09198941]\n",
+      " [ 0.50594175]]\n",
+      "Iteration: 17 alpha: 0.0625 Error: 5.382677657256817 x: [[-0.09516864]\n",
+      " [ 0.52342754]]\n",
+      "Iteration: 18 alpha: 0.0625 Error: 5.046260303678267 x: [[-0.09814917]\n",
+      " [ 0.53982046]]\n",
+      "Iteration: 19 alpha: 0.0625 Error: 4.730869034698374 x: [[-0.10094342]\n",
+      " [ 0.55518882]]\n",
+      "Iteration: 20 alpha: 0.0625 Error: 4.435189720029727 x: [[-0.10356303]\n",
+      " [ 0.56959667]]\n",
+      "Iteration: 21 alpha: 0.0625 Error: 4.157990362527869 x: [[-0.10601891]\n",
+      " [ 0.58310402]]\n",
+      "Iteration: 22 alpha: 0.0625 Error: 3.898115964869877 x: [[-0.1083213 ]\n",
+      " [ 0.59576716]]\n",
+      "Iteration: 23 alpha: 0.0625 Error: 3.6544837170655087 x: [[-0.11047979]\n",
+      " [ 0.60763885]]\n",
+      "Iteration: 24 alpha: 0.0625 Error: 3.426078484748913 x: [[-0.11250338]\n",
+      " [ 0.61876857]]\n",
+      "Iteration: 25 alpha: 0.0625 Error: 3.2119485794521085 x: [[-0.11440049]\n",
+      " [ 0.62920268]]\n",
+      "Iteration: 26 alpha: 0.0625 Error: 3.0112017932363506 x: [[-0.11617903]\n",
+      " [ 0.63898465]]\n",
+      "Iteration: 27 alpha: 0.0625 Error: 2.82300168115908 x: [[-0.11784641]\n",
+      " [ 0.64815525]]\n",
+      "Iteration: 28 alpha: 0.0625 Error: 2.646564076086636 x: [[-0.11940958]\n",
+      " [ 0.65675269]]\n",
+      "Iteration: 29 alpha: 0.0625 Error: 2.48115382133122 x: [[-0.12087505]\n",
+      " [ 0.66481279]]\n",
+      "Iteration: 30 alpha: 0.03125 Error: 2.4036177644146197 x: [[-0.12156199]\n",
+      " [ 0.66859096]]\n",
+      "Iteration: 31 alpha: 0.03125 Error: 2.3285047092766633 x: [[-0.12222747]\n",
+      " [ 0.67225107]]\n",
+      "Iteration: 32 alpha: 0.03125 Error: 2.2557389371117678 x: [[-0.12287214]\n",
+      " [ 0.67579679]]\n",
+      "Iteration: 33 alpha: 0.03125 Error: 2.185247095327025 x: [[-0.12349668]\n",
+      " [ 0.67923172]]\n",
+      "Iteration: 34 alpha: 0.03125 Error: 2.1169581235980552 x: [[-0.12410169]\n",
+      " [ 0.6825593 ]]\n",
+      "Iteration: 35 alpha: 0.03125 Error: 2.0508031822356174 x: [[-0.1246878 ]\n",
+      " [ 0.68578289]]\n",
+      "Iteration: 36 alpha: 0.03125 Error: 1.9867155827907534 x: [[-0.12525559]\n",
+      " [ 0.68890574]]\n",
+      "Iteration: 37 alpha: 0.03125 Error: 1.9246307208285416 x: [[-0.12580564]\n",
+      " [ 0.69193101]]\n",
+      "Iteration: 38 alpha: 0.03125 Error: 1.8644860108026478 x: [[-0.1263385 ]\n",
+      " [ 0.69486174]]\n",
+      "Iteration: 39 alpha: 0.03125 Error: 1.806220822965065 x: [[-0.12685471]\n",
+      " [ 0.69770088]]\n",
+      "Iteration: 40 alpha: 0.03125 Error: 1.7497764222474055 x: [[-0.12735478]\n",
+      " [ 0.7004513 ]]\n",
+      "Iteration: 41 alpha: 0.03125 Error: 1.6950959090521742 x: [[-0.12783923]\n",
+      " [ 0.70311577]]\n",
+      "Iteration: 42 alpha: 0.03125 Error: 1.6421241618942932 x: [[-0.12830854]\n",
+      " [ 0.70569697]]\n",
+      "Iteration: 43 alpha: 0.03125 Error: 1.590807781835098 x: [[-0.12876318]\n",
+      " [ 0.70819751]]\n",
+      "Iteration: 44 alpha: 0.03125 Error: 1.5410950386527507 x: [[-0.12920362]\n",
+      " [ 0.71061991]]\n",
+      "Iteration: 45 alpha: 0.03125 Error: 1.4929358186948531 x: [[-0.12963029]\n",
+      " [ 0.71296661]]\n",
+      "Iteration: 46 alpha: 0.03125 Error: 1.4462815743606396 x: [[-0.13004363]\n",
+      " [ 0.71523998]]\n",
+      "Iteration: 47 alpha: 0.03125 Error: 1.401085275161868 x: [[-0.13044405]\n",
+      " [ 0.7174423 ]]\n",
+      "Iteration: 48 alpha: 0.03125 Error: 1.3573013603130624 x: [[-0.13083196]\n",
+      " [ 0.7195758 ]]\n",
+      "Iteration: 49 alpha: 0.03125 Error: 1.314885692803279 x: [[-0.13120775]\n",
+      " [ 0.72164263]]\n",
+      "Iteration: 50 alpha: 0.03125 Error: 1.2737955149031754 x: [[-0.13157179]\n",
+      " [ 0.72364487]]\n",
+      "Iteration: 51 alpha: 0.03125 Error: 1.2339894050624531 x: [[-0.13192446]\n",
+      " [ 0.72558453]]\n",
+      "Iteration: 52 alpha: 0.03125 Error: 1.1954272361542504 x: [[-0.13226611]\n",
+      " [ 0.72746359]]\n",
+      "Iteration: 53 alpha: 0.03125 Error: 1.1580701350244318 x: [[-0.13259708]\n",
+      " [ 0.72928392]]\n",
+      "Iteration: 54 alpha: 0.03125 Error: 1.1218804433049179 x: [[-0.1329177 ]\n",
+      " [ 0.73104737]]\n",
+      "Iteration: 55 alpha: 0.03125 Error: 1.0868216794516403 x: [[-0.13322831]\n",
+      " [ 0.73275571]]\n",
+      "Iteration: 56 alpha: 0.0625 Error: 1.0188953244859127 x: [[-0.13383011]\n",
+      " [ 0.73606562]]\n",
+      "Iteration: 57 alpha: 0.0625 Error: 0.9552143667055447 x: [[-0.1343943 ]\n",
+      " [ 0.73916867]]\n",
+      "Iteration: 58 alpha: 0.0625 Error: 0.8955134687864489 x: [[-0.13492323]\n",
+      " [ 0.74207777]]\n",
+      "Iteration: 59 alpha: 0.0625 Error: 0.8395438769872969 x: [[-0.1354191 ]\n",
+      " [ 0.74480505]]\n",
+      "Iteration: 60 alpha: 0.0625 Error: 0.7870723846755902 x: [[-0.13588398]\n",
+      " [ 0.74736188]]\n",
+      "Iteration: 61 alpha: 0.0625 Error: 0.7378803606333655 x: [[-0.1363198]\n",
+      " [ 0.7497589]]\n",
+      "Iteration: 62 alpha: 0.0625 Error: 0.6917628380937803 x: [[-0.13672838]\n",
+      " [ 0.75200611]]\n",
+      "Iteration: 63 alpha: 0.0625 Error: 0.6485276607129195 x: [[-0.13711143]\n",
+      " [ 0.75411287]]\n",
+      "Iteration: 64 alpha: 0.0625 Error: 0.6079946819183628 x: [[-0.13747054]\n",
+      " [ 0.75608796]]\n",
+      "Iteration: 65 alpha: 0.0625 Error: 0.5699950142984642 x: [[-0.1378072 ]\n",
+      " [ 0.75793961]]\n",
+      "Iteration: 66 alpha: 0.0625 Error: 0.5343703259048113 x: [[-0.13812282]\n",
+      " [ 0.75967553]]\n",
+      "Iteration: 67 alpha: 0.0625 Error: 0.5009721805357598 x: [[-0.13841872]\n",
+      " [ 0.76130295]]\n",
+      "Iteration: 68 alpha: 0.0625 Error: 0.46966141925227595 x: [[-0.13869612]\n",
+      " [ 0.76282866]]\n",
+      "Iteration: 69 alpha: 0.0625 Error: 0.44030758054900737 x: [[-0.13895618]\n",
+      " [ 0.76425901]]\n",
+      "Iteration: 70 alpha: 0.0625 Error: 0.41278835676469405 x: [[-0.13919999]\n",
+      " [ 0.76559996]]\n",
+      "Iteration: 71 alpha: 0.125 Error: 0.36118981216910695 x: [[-0.13965714]\n",
+      " [ 0.76811425]]\n",
+      "Iteration: 72 alpha: 0.125 Error: 0.3160410856479687 x: [[-0.14005714]\n",
+      " [ 0.77031426]]\n",
+      "Iteration: 73 alpha: 0.125 Error: 0.27653594994197145 x: [[-0.14040714]\n",
+      " [ 0.77223926]]\n",
+      "Iteration: 74 alpha: 0.125 Error: 0.24196895619922448 x: [[-0.14071339]\n",
+      " [ 0.77392364]]\n",
+      "Iteration: 75 alpha: 0.125 Error: 0.21172283667432054 x: [[-0.14098136]\n",
+      " [ 0.77539747]]\n",
+      "Iteration: 76 alpha: 0.125 Error: 0.18525748209002849 x: [[-0.14121583]\n",
+      " [ 0.77668707]]\n",
+      "Iteration: 77 alpha: 0.25 Error: 0.13894311156752143 x: [[-0.14162616]\n",
+      " [ 0.77894388]]\n",
+      "Iteration: 78 alpha: 0.25 Error: 0.10420733367564243 x: [[-0.14193391]\n",
+      " [ 0.78063648]]\n",
+      "Iteration: 79 alpha: 0.25 Error: 0.07815550025673297 x: [[-0.14216471]\n",
+      " [ 0.78190593]]\n",
+      "Iteration: 80 alpha: 0.5 Error: 0.0390777501283644 x: [[-0.14251093]\n",
+      " [ 0.78381011]]\n",
+      "Iteration: 81 alpha: 1 Error: 0.0 x: [[-0.14285714]\n",
+      " [ 0.78571429]]\n",
+      "Final solution: [array([-1.07142857]), array([-0.14285714]), array([0.78571429])]\n"
+     ]
+    }
    ],
    "metadata": {}
   }
