--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a0c728",
+   "id": "04cb3fc5",
    "metadata": {},
    "source": [
     "![HW2P1](img/HW2P1.jpg)"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8f5126",
+   "id": "60b80a39",
    "metadata": {},
    "source": [
     "![HW2P2](img/HW2P2.jpg)"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55ade91",
+   "id": "b82dfae5",
    "metadata": {},
    "source": [
     "![HW2P3](img/HW2P3.jpg)"
@@ -162,16 +162,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec6dd89",
+   "id": "c2faf521",
    "metadata": {},
    "source": [
     "![HW2P4](img/HW2P4.jpg)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ed58790",
+   "metadata": {},
+   "source": [
+    "![HW2P5a](img/HW2P5a.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73254105",
+   "metadata": {},
+   "source": [
+    "![HW2P5_1](img/HW2P5_1.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2167df97",
+   "metadata": {},
+   "source": [
+    "![HW2P5_2](img/HW2P5_2.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef1f542",
+   "id": "023d42cc",
    "metadata": {},
    "outputs": [],
    "source": []
