--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "mathematical-combat",
+   "id": "adjusted-premises",
    "metadata": {},
    "source": [
     "### Problem 1 (50 points) \n",
@@ -34,8 +34,7 @@
     "| 1,4 dioxane | 7.43155 | 1554.679 | 240.337 |\n",
     "\n",
     "\n",
-    "The following table lists the measured data. Recall that in a binary system $x_1\n",
-    "+ x_2 = 1$.\n",
+    "The following table lists the measured data. Recall that in a binary system $x_1 + x_2 = 1$.\n",
     "\n",
     "|$x_1$ | 0.0 | 0.1 | 0.2 | 0.3 | 0.4 | 0.5 | 0.6 | 0.7 | 0.8 | 0.9 | 1.0 |\n",
     "|:-----|:--------|:---------|:--------|:-----|:-----|:-----|:-----|:-----|:-----|:-----|:-----|\n",
