--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "adjusted-premises",
+   "id": "available-morgan",
    "metadata": {},
    "source": [
     "### Problem 1 (50 points) \n",
@@ -12,10 +12,8 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "& p & = &\n",
-    "~x_1\\exp\\left(A_{12}\\left(\\frac{A_{21}x_2}{A_{12}x_1+A_{21}x_2}\\right)^2\\right)p_{water}^{sat}\\\\\n",
-    "& & + &\n",
-    "~x_2\\exp\\left(A_{21}\\left(\\frac{A_{12}x_1}{A_{12}x_1+A_{21}x_2}\\right)^2\\right)p_{1,4 dioxane}^{sat}.\n",
+    "p = & x_1\\exp\\left(A_{12}\\left(\\frac{A_{21}x_2}{A_{12}x_1+A_{21}x_2}\\right)^2\\right)p_{water}^{sat}\\\\\n",
+    "& + x_2\\exp\\left(A_{21}\\left(\\frac{A_{12}x_1}{A_{12}x_1+A_{21}x_2}\\right)^2\\right)p_{1,4 dioxane}^{sat}.\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
